--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,13 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.+'
+        classpath 'com.android.tools.build:gradle:1.1.0'
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
-        maven { url 'https://raw.github.com/rockerhieu/mvn-repo/master/' }
+        maven { url 'https://raw.github.com/chaitanya0bhagvan/mvn-repo/master/' }
     }
 }
