--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.rockerhieu.emojicon.example"
     android:versionCode="1"
     android:versionName="1.0" >
@@ -24,7 +25,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        tools:replace="android:theme"
+        >
         <activity
             android:name="com.rockerhieu.emojicon.example.MainActivity"
             android:label="@string/app_name" >
