--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         >
         <activity
             android:name="com.rockerhieu.emojicon.example.MainActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
